add module info