@@ -135,6 +135,14 @@
         </executions>
       </plugin>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+         <configuration>
+           <argLine>
+             --add-opens micrometer.jfr/com.github.marschall.micrometer.jfr=ALL-UNNAMED
+           </argLine>
+         </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <mavenExecutorId>forked-path</mavenExecutorId>
